<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/rCardLay"
    tools:context=".RandomCard">

    <ImageView
        android:id="@+id/rCardImg"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="64dp"
        android:src="@drawable/heart"
        app:layout_constraintBottom_toTopOf="@+id/rCardBtn"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="@+id/rCardBtn" />

    <TextView
        android:id="@+id/rCardTxt"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:fontFamily="@font/cabin"
        android:text="@string/jack"
        android:textAlignment="viewStart"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/rCardImg"
        app:layout_constraintEnd_toEndOf="@+id/rCardBtn"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/rCardImg" />

    <Button
        android:id="@+id/rCardBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="99dp"
        android:backgroundTint="@color/colorAccent"
        android:padding="20dp"
        android:text="@string/pickRandomCard"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/cardsLeftTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="52 card left"
        app:layout_constraintBottom_toTopOf="@+id/rCardImg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/newDeckBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="128dp"
        android:text="@string/newDeck"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rCardBtn" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />
</androidx.constraintlayout.widget.ConstraintLayout>